--- a/index.html
+++ b/index.html
@@ -3,23 +3,9 @@
 	<head>
 		<title>Dominion Game Manager</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" text="text/css" href="jquery.mobile-1.2.0.css"/>
+		<link rel="stylesheet" text="text/css" href="jquery.mobile-1.2.0.min.css"/>
 		<link rel="stylesheet" text="text/css" href="style.css"/>
 
-		<script type="text/javascript">
-
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-17312646-3']);
-			_gaq.push(['_trackPageview']);
-
-			(function() {
-			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
-
-		</script>
-		
 		<script type="text/javascript" src="jquery-1.8.2.min.js"></script>
 		<script type="text/javascript">
 $(document).bind('mobileinit', function() {
