no more cookies, also using some ES6 but not much

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ $(document).bind('mobileinit', function() {
 
 			<h3>Roll Page</h3><br>
 			<i>For Each Card:</i><br>
-			<b>Strike</b> - Remove this card, and remove it from the <i>Edition Page</i> list of possible chosen cards for subsequent rolls.<b>
+			<b>Strike</b> - Remove this card, and remove it from the <i>Edition Page</i> list of possible chosen cards for subsequent rolls.<br>
 			<b>Veto</b> - Remove this card, yet leave it enabled for subsequent rolls.<br>
 			<b>Reroll</b> - Remove this card, leave it enabled for subsequent rolls, and replace it with another card at random.<br>
 			<br>
